--- a/sunbird-es-utils/src/main/resources/mappings/org-mapping.json
+++ b/sunbird-es-utils/src/main/resources/mappings/org-mapping.json
@@ -583,6 +583,14 @@
                 }
             }
         },
+        "isTenant" : {
+	        "type" : "boolean",
+	        "fields" : {
+	            "raw" : {
+	                "type" : "boolean"
+	            }
+	        }
+	    },
         "locationId": {
             "type": "text",
             "fields": {
