--- a/sunbird-es-utils/src/main/resources/mappings/user-mapping.json
+++ b/sunbird-es-utils/src/main/resources/mappings/user-mapping.json
@@ -1348,7 +1348,7 @@
                 }
             }
         },
-        "profiledetails": {
+        "profileDetails": {
           "properties": {
             "photo": {
               "type": "text",
