Updated property as Object type

--- a/sunbird-es-utils/src/main/resources/mappings/user-mapping.json
+++ b/sunbird-es-utils/src/main/resources/mappings/user-mapping.json
@@ -2017,20 +2017,7 @@
                   "fielddata": true
                 },
                 "additionalAttributes": {
-                  "type": "text",
-                  "fields": {
-                    "raw": {
-                      "type": "text",
-                      "analyzer": "keylower",
-                      "fielddata": true
-                    }
-                  },
-                  "copy_to": [
-                    "all_fields"
-                  ],
-                  "analyzer": "cs_index_analyzer",
-                  "search_analyzer": "cs_search_analyzer",
-                  "fielddata": true
+                  "type": "object"
                 }
               }
             },
