Added isCbp Flag to get CBP Providers

--- a/sunbird-es-utils/src/main/resources/mappings/org-mapping.json
+++ b/sunbird-es-utils/src/main/resources/mappings/org-mapping.json
@@ -590,7 +590,15 @@
 	                "type" : "boolean"
 	            }
 	        }
-	    },
+	},
+	"isCbp" : {
+	        "type" : "boolean",
+	        "fields" : {
+	            "raw" : {
+	                "type" : "boolean"
+	            }
+	        }
+	},
         "locationId": {
             "type": "text",
             "fields": {
